--- a/_client/src/scss/post.scss
+++ b/_client/src/scss/post.scss
@@ -12,8 +12,6 @@
 }
 
 .post-footer {
-  margin-bottom: rem(100);
-
   @media (media(min, md)) {
     tidy-span: 7;
   }
